feat(api): define message UpdateComponentStatus
